--- a/app/public/css/me.css
+++ b/app/public/css/me.css
@@ -2,6 +2,10 @@
 	margin-bottom: 60px !important;
 }
 
+.nav-list {
+	margin-bottom: 0px !important;
+}
+
 .alert {
 	margin-top: 30px !important;
 	animation-duration: 2s;
